src/serialport/qserialport_win_p.h
@@ -87,6 +87,7 @@ public:
     bool setBreakEnabled(bool set);
 
     void startWriting();
+    qint64 readData(char *data, qint64 maxSize);
 
     bool waitForReadyRead(int msec);
     bool waitForBytesWritten(int msec);
@@ -130,6 +131,7 @@ public:
     QByteArray readChunkBuffer;
     bool readyReadEmitted;
     bool writeStarted;
+    bool readStarted;
     QWinEventNotifier *communicationNotifier;
     QWinEventNotifier *readCompletionNotifier;
     QWinEventNotifier *writeCompletionNotifier;
